Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,7 @@
     "    sorted_counts = sorted(review_counts)\n",
     "    n = len(review_counts)\n",
     "    if (n // 2) % 2 == 0:\n",
-    "        return sum([sorted_counts[n//2], sorted_counts[(n//2)-1]]))/2\n",
+    "        return (sum([sorted_counts[n//2], sorted_counts[(n//2)-1]]))/2\n",
     "    else:\n",
     "        return sorted(review_counts)[(len(review_counts)//2)]"
    ]
