Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -675,12 +675,11 @@
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "    sorted_counts = sorted(review_counts)\n",
-    "\n",
-    "#     n = len(review_counts)\n",
-    "#     if (n // 2) % 2 == 0:\n",
-    "#         return (sum([sorted_counts[n//2], sorted_counts[(n//2)-1]]))/2\n",
-    "#     else:\n",
-    "#         return sorted(review_counts)[(len(review_counts)//2)]"
+    "    n = len(review_counts)\n",
+    "    if (n // 2) % 2 == 0:\n",
+    "        return (sum([sorted_counts[n//2], sorted_counts[(n//2)-1]]))/2\n",
+    "    else:\n",
+    "        return sorted(review_counts)[(len(review_counts)//2)]"
    ]
   },
   {
