--- a/index.ipynb
+++ b/index.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,12 +675,12 @@
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "    sorted_counts = sorted(review_counts)\n",
-    "\n",
+    "    return sorted_counts\n",
     "#     n = len(review_counts)\n",
     "#     if (n // 2) % 2 == 0:\n",
     "#         return (sum([sorted_counts[n//2], sorted_counts[(n//2)-1]]))/2\n",
     "#     else:\n",
-    "#         return sorted(review_counts)[(len(review_counts)//2)]"
+    "#         return sorted(review_counts)[(len(review_counts)//2)]\n"
    ]
   },
   {
