Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -665,20 +665,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[350, 604, 1200, 1369, 1588, 2455]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# code goes here\n",
     "def median_review_count(list_of_restaurants):\n",
@@ -691,8 +680,7 @@
     "#     if (n // 2) % 2 == 0:\n",
     "#         return (sum([sorted_counts[n//2], sorted_counts[(n//2)-1]]))/2\n",
     "#     else:\n",
-    "#         return sorted(review_counts)[(len(review_counts)//2)]\n",
-    "median_review_count(restaurant_list)"
+    "#         return sorted(review_counts)[(len(review_counts)//2)]\n"
    ]
   },
   {
