Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,7 @@
     "#     if (n // 2) % 2 == 0:\n",
     "#         return (sum(sorted_counts[n//2], sorted_counts[(n//2)-1]))/2\n",
     "#     else:\n",
-    "#         return sorted(review_counts)[sorted_counts//2]\n",
+    "#         return sorted(review_counts)[n//2]\n",
     "median_review_count(restaurant_list)"
    ]
   },
