--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -665,16 +665,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1369"
+       "[350, 604, 1200, 1369, 1588, 2455]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,17 +686,17 @@
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "        sorted_counts = sorted(review_counts)\n",
-    "    n = len(review_counts)\n",
-    "    if (n // 2) % 2 == 0:\n",
-    "        return (sum(sorted_counts[n//2], sorted_counts[(n//2)-1]))/2\n",
-    "    else:\n",
-    "        return sorted_counts[n//2]\n",
+    "#     n = len(review_counts)\n",
+    "#     if (n // 2) % 2 == 0:\n",
+    "#         return (sum(sorted_counts[n//2], sorted_counts[(n//2)-1]))/2\n",
+    "#     else:\n",
+    "#         return sorted_counts[n//2]\n",
     "median_review_count(restaurant_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "1369"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
