--- a/index.ipynb
+++ b/index.ipynb
@@ -683,7 +683,8 @@
     "# code goes here\n",
     "def median_review_count(list_of_restaurants):\n",
     "    review_counts = []\n",
-    "    \n",
+    "    sorted_counts = sorted(review_counts)\n",
+    "    n\n",
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "        sorted_counts = sorted(review_counts)\n",
