--- a/index.ipynb
+++ b/index.ipynb
@@ -684,7 +684,8 @@
     "def median_review_count(list_of_restaurants):\n",
     "    review_counts = []\n",
     "    sorted_counts = sorted(review_counts)\n",
-    "    n\n",
+    "    n = len(review_counts)\n",
+    "    m = n-1\n",
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "        sorted_counts = sorted(review_counts)\n",
