--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
     "    m = n-1\n",
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
-    "    return (sorted_counts[n//2] + sorted_counts[n/]\n",
+    "    return (sorted_counts[n//2] + sorted_counts[m//2])/2\n",
     "median_review_count(restaurant_list)"
    ]
   },
