--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,7 @@
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "        sorted_counts = sorted(review_counts)\n",
-    "    return (sum(sorted_counts[n//2] + sorted_counts[m//2]))/2"
+    "    return (sorted_counts[n//2] + sorted_counts[m//2]) /2"
    ]
   },
   {
