--- a/index.ipynb
+++ b/index.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,12 +677,12 @@
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "        sorted_counts = sorted(review_counts)\n",
-    "    return (sorted_counts[n//2] + sorted_counts[m//2]) / 2"
+    "    return (sorted_counts[n//2] + sorted_counts[m]) / 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "1402.5"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
