--- a/index.ipynb
+++ b/index.ipynb
@@ -671,7 +671,7 @@
    "source": [
     "# code goes here\n",
     "def median_review_count(list_of_restaurants):\n",
-    "    sorted_counts = list_of_restaurants.sort(key=lambda i: i['re'])\n",
+    "    sorted_counts = list_of_restaurants.sort(key=lambda i: i['review_count'])\n",
     "    n = len(review_counts)\n",
     "    m = (n//2)-1\n",
     "    for i in range(len(list_of_restaurants)):\n",
