--- a/index.ipynb
+++ b/index.ipynb
@@ -631,7 +631,7 @@
     "    review_counts = []\n",
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
-    "    return total_reviews/no_of_counts"
+    "    return sum(review_counts)"
    ]
   },
   {
