--- a/index.ipynb
+++ b/index.ipynb
@@ -674,7 +674,7 @@
     "    sorted_counts = list_of_restaurants.sort(key=lambda i: i['review_count'])\n",
     "    n = len(list_of_restaurants)\n",
     "    if n%2==0:\n",
-    "        return sum(sorted_counts) / 2\n",
+    "        return sum(sorted_counts[n//2]) / 2\n",
     "    if \n",
     "        \n",
     "    return (sorted_counts[n//2] + sorted_counts[m]) / 2"
