Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -675,7 +675,8 @@
     "    n = len(list_of_restaurants)\n",
     "    if n%2==0:\n",
     "        return sum(sorted_counts[n//2]) / 2\n",
-    "    if \n",
+    "    else:\n",
+    "        return \n",
     "        \n",
     "    return (sorted_counts[n//2] + sorted_counts[m]) / 2"
    ]
