Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -676,7 +676,7 @@
     "    if n%2==0:\n",
     "        return sum(sorted_counts[n//2]) / 2\n",
     "    else:\n",
-    "        return sum()\n",
+    "        return sum(sorted_counts[n//2])\n",
     "        \n",
     "    return (sorted_counts[n//2] + sorted_counts[m]) / 2"
    ]
