--- a/index.ipynb
+++ b/index.ipynb
@@ -673,6 +673,7 @@
     "def median_review_count(list_of_restaurants):\n",
     "    sorted_counts = list_of_restaurants.sort(key=lambda i: i['review_count'])\n",
     "    n = len(list_of_restaurants)\n",
+    "    half = n/2\n",
     "    if n%2==0:\n",
     "        return sum(sorted_counts[n//2]) / 2\n",
     "    else:\n",
