--- a/index.ipynb
+++ b/index.ipynb
@@ -675,7 +675,7 @@
     "    n = len(list_of_restaurants)\n",
     "    half = n/2\n",
     "    if n%2==0:\n",
-    "        return (sorted_counts[half]['review_count']) + (sorted_counts[half-1]) / 2\n",
+    "        return (sorted_counts[half]['review_count']) + (sorted_counts[half-1]['review_count'])) / 2\n",
     "    else:\n",
     "        return sum(sorted_counts[n//2])\n",
     "        \n",
