Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -677,7 +677,7 @@
     "    if n%2==0:\n",
     "        return ((sorted_counts[half]['review_count']) + (sorted_counts[half-1]['review_count'])) / 2\n",
     "    else:\n",
-    "        return (sorted_counts[half]['review_count'])\n",
+    "        return sorted_counts[half])\n",
     "        \n",
     "    return (sorted_counts[n//2] + sorted_counts[m]) / 2"
    ]
