--- a/index.ipynb
+++ b/index.ipynb
@@ -675,9 +675,9 @@
     "    n = len(list_of_restaurants)\n",
     "    half = int(n/2)\n",
     "    if n%2==0:\n",
-    "        return ((sorted_counts[half]['review_count']) + (sorted_counts[half-1]['review_count'])) / 2\n",
+    "        return ((list_of_restaurants[half]['review_count']) + (list_of_restaurants[half-1]['review_count'])) / 2\n",
     "    else:\n",
-    "        return (sorted_counts[half]['review_count'])\n",
+    "        return (list_of_[half]['review_count'])\n",
     "        \n",
     "    return (sorted_counts[n//2] + sorted_counts[m]) / 2"
    ]
