--- a/index.ipynb
+++ b/index.ipynb
@@ -631,9 +631,9 @@
     "    review_counts = []\n",
     "    for i in range(len(list_of_restaurants)):\n",
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
-    "    total_reviews = sum(review_counts)\n",
+    "    total_reviews = \n",
     "    no_of_counts = len(review_counts)\n",
-    "    return total_reviews/no_of_counts"
+    "    return sum(list_of_/no_of_counts"
    ]
   },
   {
