Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -633,7 +633,7 @@
     "        review_counts.append(list_of_restaurants[i]['review_count'])\n",
     "    total_reviews = \n",
     "    no_of_counts = len(review_counts)\n",
-    "    return sum(list_of_restaurants[i]['review_count']/no_of_counts"
+    "    return sum(list_of_/no_of_counts"
    ]
   },
   {
